<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search"/>
    <group android:menuCategory="container">
        <item android:id="@+id/favorite"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/favorite"
            app:showAsAction="ifRoom"/>
        <item android:id="@+id/developer"
            android:icon="@drawable/ic_dev"
            android:title="@string/dev"
            app:showAsAction="always"/>
    </group>
</menu>
